[gd_scene format=3 uid="uid://b3r732oir1wnb"]

[ext_resource type="Script" uid="uid://bs0n80a5r5bxh" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="PackedScene" uid="uid://c4fo2mlqmpl3e" path="res://hyper_level_indicator.tscn" id="2_ibotj"]
[ext_resource type="Texture2D" uid="uid://bthsoqtdvwbom" path="res://ui_icon.png" id="3_nltto"]
[ext_resource type="Theme" uid="uid://cegr2r2u3pjgm" path="res://pixel_ui_theme.tres" id="4_ibotj"]
[ext_resource type="PackedScene" uid="uid://c3jp5scq4rje" path="res://ammo_bar.tscn" id="4_nltto"]
[ext_resource type="Texture2D" uid="uid://vi7ashgw2pxr" path="res://ui_icon_ouch.png" id="5_n5ude"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y4yjw"]
atlas = ExtResource("3_nltto")
region = Rect2(0, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_waa4j"]
atlas = ExtResource("5_n5ude")
region = Rect2(0, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_ok7cu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4yjw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_waa4j")
}],
"loop": true,
"name": &"ouch",
"speed": 5.0
}]

[node name="UI" type="Control" unique_id=287865821]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")
metadata/_edit_lock_ = true

[node name="SubViewport" type="CanvasLayer" parent="." unique_id=997361781]

[node name="HyperLevelIndicator" parent="SubViewport" unique_id=1358365748 instance=ExtResource("2_ibotj")]
offset_left = 392.0
offset_top = 56.0
offset_right = 392.0
offset_bottom = 56.0

[node name="Score" type="Label" parent="SubViewport" unique_id=280786330]
offset_left = 216.0
offset_right = 376.0
offset_bottom = 36.0
theme = ExtResource("4_ibotj")
text = "9999999999"
horizontal_alignment = 2

[node name="Lives" type="Control" parent="SubViewport" unique_id=337819254]
layout_mode = 3
anchors_preset = 0
offset_left = 68.0
offset_top = 217.0
offset_right = 108.0
offset_bottom = 257.0

[node name="LifeIcon" type="AnimatedSprite2D" parent="SubViewport/Lives" unique_id=1719751803]
position = Vector2(-44, -201)
sprite_frames = SubResource("SpriteFrames_ok7cu")

[node name="Label" type="Label" parent="SubViewport/Lives" unique_id=1485734067]
layout_mode = 0
offset_left = -24.0
offset_top = -217.0
offset_right = 34.0
offset_bottom = -179.0
theme = ExtResource("4_ibotj")
text = "x29"

[node name="TimeDisplay" type="Control" parent="SubViewport" unique_id=755037934]
layout_mode = 3
anchors_preset = 0
offset_right = 13.0
offset_bottom = 12.0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="SubViewport/TimeDisplay" unique_id=2115863164]
layout_mode = 0
offset_left = 129.0
offset_right = 191.0
offset_bottom = 38.0
theme = ExtResource("4_ibotj")
text = "999"

[node name="AmmoBar" parent="SubViewport" unique_id=740443925 instance=ExtResource("4_nltto")]
offset_left = 392.0
offset_right = 392.0
